syntax = "proto3";

package exserverpb;
import "github.com/luno/reflex/reflexpb/reflex.proto";

service ExServer{
  rpc StreamEvent1 (reflexpb.StreamRequest) returns (stream reflexpb.Event) {}
  rpc StreamEvent2 (reflexpb.StreamRequest) returns (stream reflexpb.Event) {}
  rpc Echo (EchoMsg) returns (EchoMsg) {}
}

message EchoMsg {
  string message = 1;
}
